<resources>
    <string name="app_name">Asicos</string>
    <string name="no_reminders">No events have been set yet</string>
    <string name="no_notes">You do not have any notes yet</string>
    <string name="add_note">Add note</string>
    <string name="title_hint">Add title for note</string>
    <string name="title_hint_event">Add title for event</string>
    <string name="event_description">Add a description for the event</string>
    <string name="contact_unknown">Unknown number</string>
    <string name="answer_call">Answer</string>
    <string name="decline_call">Hang Up</string>
    <string name="access_notifications_dialog_title">Notification access</string>
    <string name="access_notifications_dialog_message">To be able to answer calls using this app you will need to enable notification access.</string>
    <string name="cancel">Cancel</string>
    <string name="sms_dialog_title">SMS message</string>
    <string name="sms_dialog_text">Write the text of your sms below and press send.</string>
    <string name="note_dialog_title">Add note</string>
    <string name="note_dialog_text">Write the text for the note</string>
    <string name="dialog_contact_name">Contact name</string>
    <string name="dialog_contact_phone">Phone</string>
    <string name="general_dialog_send">Send</string>
    <string name="general_dialog_ok">OK</string>
    <string name="contact_dialog_title">Add contact</string>
    <string name="contact_dialog_text">Complete the fields for the new contact</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_contacts">Contacts</string>
    <string name="drawer_gps">Navigation</string>
    <string name="drawer_reminder">Calendar</string>
    <string name="drawer_timer">Timer</string>
    <string name="drawer_currency">Exchange Rates</string>
    <string name="drawer_start_listener">Start listening for commands</string>
    <string name="drawer_add_contact">Add contact</string>
    <string name="drawer_exit_app">Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_start">Start time</string>
    <string name="tv_end">End time</string>
    <string name="btn_event">Add event</string>
    <string name="tv_reminder">Reminder time</string>
    <string name="search_action_contact">Contact search</string>
    <string name="btn_gps">Start navigation</string>
    <string name="gps_hint">Destination</string>
    <string name="toast_complete_fields">Please complete all fields!</string>
    <string name="hello_user">Hello %1$s , what would you have me do</string>
    <string name="hello_user_default">Hello user. Before we start could you tell me what your name is</string>
    <string name="user_set">A pleasure meeting you %1$s. What would you have me do</string>
    <string name="to_who">Who should i %1$s</string>
    <string name="call">call</string>
    <string name="send_sms">send a message to</string>
    <string name="sms">sms</string>
    <string name="last_command">last command</string>
    <string name="message">What message should i send</string>
    <string name="currency_type">Ron -> %1$s</string>
    <string name="event_added">Event successfully added</string>
    <string name="note_text_hint">Note text</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="lap">Mark Lap</string>
    <string name="no_command">You did not input a command please try again</string>
    <string name="nothing">Why did you start me then</string>
    <string name="did_you_mean">Did you mean %1$s</string>
    <string name="no_match">Sorry didn\'t find a match</string>
    <string name="no_contact">Sorry did not find the contact in your contact list</string>
    <string name="message_sent">Message sent</string>
    <string name="give_number">Now give me the phone number</string>
    <string name="dialog_sum">Give the sum</string>
    <string name="contact_added">Contact added</string>
    <string name="not_a_phone">The given information was invalid please try again</string>
    <string name="description_question">Do you want a description?</string>
    <string name="start_time">Specify start time</string>
    <string name="what_is_it">OK. What is it</string>
    <string name="what_is_start_time">Specify start time</string>
    <string name="what_is_end_time">Specify end time</string>
    <string name="reminder_question">Do you want a reminder?</string>
    <string name="today">today</string>
    <string name="what_year">In what year</string>
    <string name="what_month">In what month</string>
    <string name="what_day">In what day</string>
    <string name="specify_sum">Specify sum</string>
    <string name="result">The result is %1$s</string>
    <string name="want_title">Do you want a title for the note?</string>
    <string name="note_added">Note added</string>
    <string name="name_changed">Name has been changed</string>
    <string name="alarm_set">Alarm set</string>
    <string name="specify_contact">Please specify contact name</string>
    <string name="specify_destination">Please specify destination</string>
    <string name="specify_event_name">Please specify event name</string>
    <string name="specify_currency">Please specify currency</string>
    <string name="timer_started">Timer started</string>
    <string name="timer_reset">Timer reset</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="destinations_cleared">Destinations cleared</string>
    <string name="change_user">Ok. How do you want me to call you</string>
    <string name="specify_alarm">Please specify alarm time</string>
    <string name="specify_note_text">Please specify note text</string>
    <string name="specify_expression">Please specify mathematical expression</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string-array name="call_key">
        <item>call</item>
        <item>dial</item>
    </string-array>

    <string-array name="sms_key">
        <item>sms</item>
        <item>message</item>
    </string-array>

    <string-array name="add_contact_key">
        <item>add contact</item>
    </string-array>

    <string-array name="log_out_key">
        <item>exit</item>
        <item>log out</item>
        <item>close</item>
        <item>stop</item>
        <item>log off</item>!~
    </string-array>

    <string-array name="gps_key">
        <item>directions</item>
        <item>navigation</item>
        <item>route</item>
        <item>gps</item>
    </string-array>

    <string-array name="timer_key">
        <item>timer</item>
        <item>chronometer</item>
    </string-array>

    <string-array name="nothing_key">
        <item>nothing</item>
    </string-array>

    <string-array name="event_key">
        <item>event</item>
        <item>reminder</item>
        <item>calendar</item>
    </string-array>

    <string-array name="currency_key">
        <item>currency</item>
        <item>exchange</item>
    </string-array>

    <string-array name="reset_key">
        <item>reset</item>
    </string-array>

    <string-array name="clear_notes_key">
        <item>clear notes</item>
        <item>delete notes</item>
    </string-array>

    <string-array name="clear_gps_key">
        <item>clear routes</item>
        <item>delete gps information</item>
    </string-array>

    <string-array name="change_name_key">
        <item>change name</item>
        <item>modify user</item>
        <item>change user</item>
        <item>modify name</item>
    </string-array>

    <string-array name="alarm_key">
        <item>alarm</item>
    </string-array>

    <string-array name="note_key">
        <item>note</item>
    </string-array>

    <string-array name="calculate_key">
        <item>calculate</item>
        <item>evaluate</item>
    </string-array>

</resources>
